# example-native-token-transfers

./: .gitignore  .gitmodules  Dockerfile  Dockerfile-ntt  Dockerfile.cli  Makefile  README.md  Tiltfile  anchor-deploy.yaml  ci.yaml  deployments.md  foundry.toml  jest.config.ts  ntt.yaml  package-lock.json  package.json  setSdkVersion.ts  tsconfig.test.json
solana/: .eslintrc.json  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  Dockerfile.test-validator  Makefile  README.md  jest.config.ts  package-lock.json  package.json  run-tests  rust-toolchain  solana-devnet.yaml  tsconfig.anchor.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
solana/fuzz/src/: Cargo.toml  README.md  fuzz_rate_limit.rs  fuzz_trimmed_amount.rs
solana/idl/json/: dummy_transfer_hook.json  example_native_token_transfers.json  ntt_quoter.json  wormhole_governance.json
solana/idl/ts/: dummy_transfer_hook.ts  example_native_token_transfers.ts
solana/keys/: test.json
solana/modules/ntt-messages/: Cargo.toml
solana/modules/ntt-messages/src/: chain_id.rs  endpoint.rs  errors.rs  lib.rs  manager.rs  mode.rs  normalized_amount.rs  ntt.rs  ntt_manager.rs  transceiver.rs  trimmed_amount.rs
solana/modules/ntt-messages/src/endpoints/: mod.rs  wormhole.rs
solana/modules/ntt-messages/src/transceivers/: wormhole.rs
solana/modules/ntt-messages/src/utils/: maybe_space.rs  mod.rs
solana/programs/dummy-transfer-hook/: Cargo.toml
solana/programs/dummy-transfer-hook/src/: lib.rs
solana/programs/example-native-token-transfers/: Cargo.toml
solana/programs/example-native-token-transfers/src/: bitmap.rs  chain_id.rs  clock.rs  config.rs  error.rs  lib.rs  messages.rs  normalized_amount.rs  peer.rs  pending_token_authority.rs  registered_endpoint.rs  registered_transceiver.rs  sequence.rs  sibling.rs  spl_multisig.rs  transfer.rs
solana/programs/example-native-token-transfers/src/endpoints/: mod.rs
solana/programs/example-native-token-transfers/src/instructions/: admin.rs  initialize.rs  initialize_multisig.rs  luts.rs  mark_outbox_item_as_released.rs  mod.rs  recover.rs  redeem.rs  release_inbound.rs  release_inbound_multisig.rs  release_outbound.rs  transfer.rs
solana/programs/example-native-token-transfers/src/queue/: inbound.rs  inbox.rs  mod.rs  outbound.rs  outbox.rs  rate_limit.rs
solana/programs/example-native-token-transfers/tests/: broadcast.rs  cancel_flow.rs  governance.rs  lib.rs  receive.rs  transfer.rs
solana/programs/example-native-token-transfers/tests/common/: account_utils.rs  hack.rs  mod.rs  setup.rs  utils.rs
solana/programs/example-native-token-transfers/tests/sdk/: accounts.rs  mod.rs
solana/programs/extra-idl/: Cargo.toml  README.md
solana/programs/extra-idl/src/: lib.rs
solana/programs/native-token-transfers/: Cargo.toml
solana/programs/native-token-transfers/src/: error.rs  lib.rs
solana/programs/native-token-transfers/src/instructions/: luts.rs  redeem.rs  release_inbound.rs
solana/programs/native-token-transfers/src/transceivers/: mod.rs
solana/programs/native-token-transfers/tests/common/: query.rs  submit.rs
solana/programs/native-token-transfers/tests/sdk/: accounts.rs  mod.rs
solana/programs/ntt-quoter/: Cargo.toml
solana/programs/ntt-quoter/src/: error.rs  lib.rs  state.rs
solana/programs/ntt-quoter/src/processor/: admin.rs  close_relay.rs  mod.rs  request_relay.rs  update_prices.rs
solana/programs/ntt-transceiver/: Cargo.toml
solana/programs/ntt-transceiver/src/: lib.rs
solana/programs/ntt-transceiver/src/wormhole/: accounts.rs
solana/programs/wormhole-governance/: Cargo.toml
solana/programs/wormhole-governance/src/: error.rs  lib.rs
solana/programs/wormhole-governance/src/instructions/: governance.rs  mod.rs
solana/scripts/: anchor-lint.sh  idlJsonToTs.ts  mangleIdl.ts  ntt_instantiations.json  patch-idl  program-version  readVersion.ts  regenerateIdl.ts  run-ts-tests  sync-versions
solana/tests/: anchor.test.ts  example-native-token-transfer.ts  tmp.ts  transfer-fee-burning.test.ts  transfer-fee-locking.test.ts  transfer-hook-burning.test.ts  transfer-hook-locking.test.ts
solana/tests/accounts/mainnet/: core_bridge_config.json  core_bridge_fee_collector.json  guardian_set_0.json
solana/tests/utils/: index.ts
solana/ts/: index.ts
solana/ts/idl/1_0_0/ts/: dummy_transfer_hook.ts  example_native_token_transfers.ts  wormhole_governance.ts
solana/ts/idl/2_0_0/json/: example_native_token_transfers.json  ntt_quoter.json  ntt_transceiver.json  wormhole_governance.json
solana/ts/idl/2_0_0/ts/: example_native_token_transfers.ts  ntt_quoter.ts  ntt_transceiver.ts  wormhole_governance.ts
solana/ts/idl/3_0_0/json/: dummy_transfer_hook.json  example_native_token_transfers.json  ntt_quoter.json  ntt_transceiver.json  wormhole_governance.json
solana/ts/idl/3_0_0/ts/: dummy_transfer_hook.ts  example_native_token_transfers.ts  ntt_quoter.ts  ntt_transceiver.ts  wormhole_governance.ts
solana/ts/lib/: bindings.ts  index.ts  ntt.ts  nttLayout.ts  quoter.ts  utils.ts
solana/ts/lib/anchor-idl/: 1_0_0.ts  2_0_0.ts  3_0_0.ts  index.ts
solana/ts/lib/utils/: wormhole.ts
solana/ts/metrics/: helpers.ts  index.ts  metrics.ts
solana/ts/scripts/: .env.sample  claimOwnership.ts  configureInboundLimits.ts  configureQuoter.ts  createSplToken.ts  env.ts  executeConvernanceVaas.ts  executeGonvernanceVaas.ts  executeGovernanceVaa.ts  helpers.ts  initializeNtt.ts  initializeQuoter.ts  mintTokens.ts  quoteSpecialRelays.ts  readManagerConfiguration.ts  registerManagers.ts  registerPeers.ts  setUpTestnet.ts  transferOwnershipToGov.ts  updateOutboundLimit.ts  updatePeers.ts
solana/ts/scripts/config/devnet/: governance-config.json  governance-vaa.json  ntt-config.json  programs.json  (+1 more)
solana/ts/sdk/: bindings.ts  governance.ts  index.ts  normalized_amount.ts  ntt.ts  nttLayout.ts  quoter.ts  side-effects.ts  trimmed_amount.ts  utils.ts
solana/ts/sdk/anchor-idl/: 1_0_0.ts  2_0_0.ts  index.ts
solana/ts/sdk/payloads/: common.ts  transfers.ts  wormhole.ts
solana/ts/sdk/utils/: bpfLoaderUpgradeable.ts  index.ts  wormhole.ts
(+832 files in other folders)
