[package]
name = "ntt-fuzz"
version = "0.0.1"


[[bin]]
name = "ntt-fuzz"
path = "fuzz_trimmed_amount.rs"

edition = "2021"
[dependencies]
ntt-messages = { path = "../../modules/ntt-messages" }
honggfuzz = "0.5"
# wormhole-io = "0.1.3"
# wormhole-solana-utils = "0.2.0-alpha.15"
#
# anchor-lang = "0.29.0"
# anchor-spl = "0.29.0"
# solana-program = "=1.17.2"
#
# wormhole-anchor-sdk = { version = "0.29.0-alpha.1", default-features = false }
# wormhole-sdk = { git = "https://github.com/wormhole-foundation/wormhole", rev = "eee4641" }
# serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", rev = "eee4641" }
# hex = "0.4.3"

