[package]
name = "ntt-messages"
version = "0.1.0"
edition = "2021"

[features]
default = [ "wormhole" ]
wormhole = []
hash = [ "solana-program" ]
anchor = [ "anchor-lang" ]

[dependencies]
anchor-lang = { workspace = true, optional = true }
wormhole-io.workspace = true
solana-program = { workspace = true, optional = true }

[dev-dependencies]

hex.workspace = true
