[package]
name = "example-native-token-transfers"
version = "0.1.0"
description = "Example implementation of native token transfer standard"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_native_token_transfers"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]

[dependencies]
ahash = "=0.8.6"

anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
bitmaps = "3.2.1"
hex = "0.4.3"
solana-program = "=1.17.2"
wormhole-anchor-sdk = "0.29.0-alpha.1"
wormhole-io = "0.1.3"
wormhole-governance = { path = "../wormhole-governance" }

[dev-dependencies]
hex = "0.4.3"

solana-program-test = "1.17.2"
serde_json = "1.0.113"
serde = "1.0.196"
base64 = "0.21.7"
solana-sdk = "1.17.2"
spl-token = "4"
spl-associated-token-account = "2.2.0"
sha3 = "0.10.4"
wormhole-raw-vaas = "0.2.0-alpha.2"
libsecp256k1 = "=0.6.0"
wormhole-sdk = { git = "https://github.com/wormhole-foundation/wormhole", rev = "eee4641" }
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", rev = "eee4641" }
