[package]
name = "example-native-token-transfers"
version = "0.1.0"
description = "Example implementation of native token transfer standard"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_native_token_transfers"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]

[dependencies]
ahash = "=0.8.5"

anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
bitmaps = "3.2.1"
hex.workspace = true
solana-program.workspace = true
wormhole-anchor-sdk.workspace = true
wormhole-io.workspace = true
wormhole-solana-utils.workspace = true

[dev-dependencies]
wormhole-governance = { path = "../wormhole-governance", features = ["no-entrypoint"] }
solana-program-test = "*"
serde_json = "1.0.113"
serde = "1.0.196"
base64 = "0.21.7"
solana-sdk = "*"
spl-token = "4"
spl-associated-token-account = "2.2.0"
sha3 = "0.10.4"
wormhole-raw-vaas = "0.2.0-alpha.2"
libsecp256k1 = "=0.6.0"
wormhole-sdk.workspace = true
serde_wormhole.workspace = true
solana-program-runtime = "1.17.2"
bincode = "1.3.3"
