[package]
name = "example-native-token-transfers"
version = "1.0.0"
description = "Example implementation of native token transfer standard"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_native_token_transfers"

[features]
default = ["mainnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]
# cargo-test-sbf will pass this along
test-sbf = []
# networks
mainnet = [ "wormhole-anchor-sdk/mainnet" ]
solana-devnet = [ "wormhole-anchor-sdk/solana-devnet" ]
tilt-devnet = [ "wormhole-anchor-sdk/tilt-devnet" ]
tilt-devnet2 = [ "tilt-devnet" ]

[lints]
workspace = true

[dependencies]

ntt-messages = { path = "../../modules/ntt-messages", features = ["anchor", "hash"] }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
bitmaps = "3.2.1"
hex.workspace = true
cfg-if.workspace = true
solana-program.workspace = true
solana-address-lookup-table-program.workspace = true
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
wormhole-anchor-sdk.workspace = true
wormhole-io.workspace = true
wormhole-solana-utils.workspace = true

[dev-dependencies]
wormhole-governance = { path = "../wormhole-governance", features = ["no-entrypoint"] }
solana-program-test.workspace = true
serde_json = "1.0.113"
serde = "1.0.196"
base64 = "0.21.7"
solana-sdk = "*"
spl-token = "4"
spl-associated-token-account = { version = "3.0.0", features = ["no-entrypoint"] }
sha3 = "0.10.4"
wormhole-raw-vaas = "0.2.0-alpha.2"
libsecp256k1 = "=0.6.0"
wormhole-sdk.workspace = true
serde_wormhole.workspace = true
solana-program-runtime.workspace = true
bincode = "1.3.3"
