[package]
name = "extra-idl"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "extra_idl"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
  "anchor-lang/idl-build",
  "example-native-token-transfers/idl-build"
]

[dependencies]
anchor-lang = "0.29.0"
example-native-token-transfers = { path = "../example-native-token-transfers", features = ["no-entrypoint"] }
ntt-messages = { path = "../../modules/ntt-messages", features = ["anchor"] }
