[package]
name = "wormhole-governance"
version = "0.1.0"
description = "Governance for programs controlled by Wormhole Guardians"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
  "anchor-lang/idl-build",
]

[dependencies]
anchor-lang = "0.29.0"

solana-program = "=1.17.2"
wormhole-anchor-sdk = "0.29.0-alpha.1"
wormhole-io = "0.1.3"
wormhole-sdk = { git = "https://github.com/wormhole-foundation/wormhole", rev = "eee4641" }
