[package]
name = "wormhole-governance"
version = "0.1.0"
description = "Governance for programs controlled by Wormhole Guardians"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
  "anchor-lang/idl-build",
]

[dependencies]
anchor-lang.workspace = true
solana-program.workspace = true

wormhole-anchor-sdk.workspace = true
wormhole-io.workspace = true
wormhole-sdk.workspace = true
